@@ -43,6 +43,7 @@ Sujan Shakya
 Klavdij Voncina <voncina.klavdij@siol.net>
 Scott Koranda
 Phil Hands
+jordonwii (http://code.google.com/u/jordonwii)
 
 
 Erik gets a special mention for the contribution of the "Showcase".
