@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>FlowPanel Demo</title>
+        <meta name="pygwt:module" content="FlowPanel" />
+        <script type="text/javascript" src="bootstrap.js"></script>
+        <link href="pyjamas.css" type="text/css" rel="stylesheet" />
+    </head>
+    <body onunload="">
+    </body>
+</html>
